# chess

./: FILE_STRUCTURE.md  QUICKSTART.md  README.md  diagnose.sh  docker-compose.yml  start_all.sh
.github/workflows/: ci-cd.yml
backend/core/: asgi.py
chess_bot/: db.sqlite3  pyproject.toml  test_engine.py
chess_bot/ai/: game_session.py  urls.py  views.py
chess_bot/ai/engine/: board.py  book_loader.py  bot.py  evaluation.py  move.py  move_generator.py  opening_book.py  repetition_table.py  search.py  searcher.py  transposition_table.py  zobrist.py
chess_bot/bot/: settings.py  urls.py
frontend/: Dcokerfile  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  router.jsx
frontend/src/chess/: MoveValidator.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  SocketContext.jsx
frontend/src/hooks/: useSound.js  useTimer.js  useUserNotifications.js
frontend/src/pages/: BotGame.jsx  Friends.jsx  Game.jsx  Home.jsx  Lobby.jsx  Login.jsx  Profile.jsx  Register.jsx  Spectate.jsx
frontend/src/services/: api.js  authService.js  botService.js  matchmakingService.js  socketService.js
frontend/src/styles/: Board.css  globals.css
server/: Dockerfile  celerybeat-schedule.bak  pyproject.toml
server/accounts/: admin.py  friend_views.py  models.py  redis_pubsub.py  serializers.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py
server/core/: asgi.py  jwt_auth_middleware.py  settings.py
server/game/: admin.py  challenge_views.py  chess_engine.py  consumers.py  events.py  matchmaking_tasks.py  models.py  routing.py  user_consumer.py
server/game/migrations/: 0001_initial.py
(+16 files in other folders)
