[project]
name = "chess-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django==6.0",

    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "daphne==4.0.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0"
]
