[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core Django stack
    "Django==5.0.1",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "djangorestframework-simplejwt==5.3.1",

    # ASGI / WebSockets
    "channels==4.0.0",
    "channels-redis==4.1.0",
    "daphne==4.0.0",

    # Utilities
    "Pillow==10.1.0",
    "python-dotenv==1.0.0"
]
